<resources>
    <string name="app_name">MeetingScheduler</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="default_date">00-00-0000</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
    <string name="schedule_a_meeting">Schedule a Meeting</string>
    <string name="back">Back</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_meeting_scheduled">No Meeting Scheduled</string>
    <string name="slot_available">Slot Available</string>
    <string name="slot_not_available">Slot not Available</string>
    <string name="cannot_schedule_meeting_for_past_dates">Cannot schedule meeting for past dates</string>
    <string name="start_time_before_end_time">Start Time should be before End Time</string>
    <string name="please_select_meeting_date">Please select Meeting Date</string>
    <string name="please_select_start_time">Please select Start time</string>
    <string name="please_select_end_time">Please select End time</string>
</resources>
