<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorAccent"
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/btn_back"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:gravity="center"
                android:drawableStart="@drawable/left_arrow"
                android:textSize="@dimen/sp15"
                android:layout_marginTop="@dimen/dp8"
                app:layout_constraintEnd_toStartOf="@id/tv_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/dp8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                android:layout_centerInParent="true"
                android:textSize="@dimen/sp20"
                android:textAllCaps="true"
                android:text="@string/schedule_a_meeting"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@+id/btn_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                android:layout_marginEnd="@dimen/dp8"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/dp8"
                app:layout_constraintStart_toStartOf="@+id/btn_back"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_below="@id/top_layout"
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

        <TextView
                android:id="@+id/tv_meeting_date"
                android:layout_width="0dp"
                android:padding="@dimen/dp15"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp24"
                android:layout_marginTop="@dimen/dp32"
                android:text="@string/meeting_date"
                android:textSize="@dimen/sp20"
                android:drawableEnd="@drawable/down_arrow"
                android:background="@drawable/tv_bg"/>

        <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="0dp"
                android:padding="@dimen/dp15"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="@dimen/sp20"
                android:drawableEnd="@drawable/down_arrow"
                android:background="@drawable/tv_bg"
                app:layout_constraintStart_toStartOf="@+id/tv_meeting_date"
                app:layout_constraintEnd_toEndOf="@id/tv_meeting_date"
                android:layout_marginTop="@dimen/dp24"
                app:layout_constraintTop_toBottomOf="@+id/tv_meeting_date"/>

        <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="0dp"
                android:padding="@dimen/dp15"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="@dimen/sp20"
                android:drawableEnd="@drawable/down_arrow"
                android:background="@drawable/tv_bg"
                app:layout_constraintStart_toStartOf="@+id/tv_meeting_date"
                app:layout_constraintEnd_toEndOf="@id/tv_meeting_date"
                android:layout_marginTop="@dimen/dp24"
                app:layout_constraintTop_toBottomOf="@+id/tv_start_time"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/dp100"
                app:layout_constraintTop_toBottomOf="@+id/tv_end_time"
                app:layout_constraintEnd_toEndOf="@+id/tv_end_time"
                app:layout_constraintStart_toStartOf="@+id/tv_end_time"
                android:layout_marginTop="@dimen/dp24"
                android:background="@drawable/bg_et"
                android:hint="@string/description"
                android:padding="@dimen/dp15"
                android:textSize="@dimen/sp20"
                android:gravity="start"
                android:id="@+id/editText"/>

        <Button
                android:id="@+id/btn_submit"
                android:textSize="@dimen/sp20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:background="@drawable/btn_selector"
                android:layout_marginTop="@dimen/dp64"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintStart_toStartOf="@+id/editText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>